# MockImages

./: .gitignore  Dockerfile  README.md  docker-compose.yml  init_db.sql  pyproject.toml
refs/: MockImages_dev_plan.md
src/mock_images/: __init__.py  __main__.py  chunker.py  config.py  encoder.py  frame_extractor.py  loop.py  meta_db.py  payload_builder.py  runtime.py  sender.py
src/mock_images/admin/: __init__.py  server.py
src/mock_images/admin/static/css/: admin.css  mockimages.css
src/mock_images/admin/static/js/: common.js  dashboard.js  media.js  stations.js
src/mock_images/admin/templates/: index.html  media.html  stations.html
